--- a/SDZ.ipynb
+++ b/SDZ.ipynb
@@ -261,6 +261,148 @@
       },
       "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "\n",
+        "import os\n",
+        "import shutil\n",
+        "import urllib.request\n",
+        "\n",
+        "from IPython.utils.capture import capture_output\n",
+        "from IPython.display import clear_output\n",
+        "import sys\n",
+        "import fileinput\n",
+        "import ipywidgets as widgets\n",
+        "from ipywidgets import HBox, VBox\n",
+        "from ipywidgets import interact, interactive, fixed\n",
+        "from ipywidgets import Layout, SelectMultiple\n",
+        "from IPython.core.display import HTML\n",
+        "\n",
+        "zzz_install = \"/content/sample_data\"\n",
+        "zzz_install_widget = widgets.Text(value=zzz_install, description=\"Path install\")\n",
+        "zzz_Version = widgets.Dropdown(options=[\"V1.5\", \"V2.1\"], description=\"Version\")\n",
+        "Download_Base_Model = widgets.Text(value=\"\", description=\"Link Model\")\n",
+        "zzz = \"zzz\"\n",
+        "zzz_widget = widgets.Text(value=zzz, description=\"zzz\")\n",
+        "xyz = (zzz_install+'/'+'zzz')\n",
+        "xyz_widget = widgets.Text(value=xyz, description=\"xyz\")\n",
+        "\n",
+        "model_initp = \"\"\n",
+        "model_init = widgets.Text(value=model_initp, description=\"Model_init\")\n",
+        "models_dirp = \"\"\n",
+        "models_dir = widgets.Text(value=models_dirp, description=\"Models_dir\")\n",
+        "\n",
+        "zzz_Argsp = \"\"\n",
+        "zzz_Args = widgets.Text(value=zzz_Argsp, description=\"Args\")\n",
+        "zzz_Training = widgets.Dropdown(options=[\"\", \"hyako\", \"dramb\"], description=\"Training\")\n",
+        "\n",
+        "ctrll5 = widgets.Checkbox(value=False, description=\"ctrll5\")\n",
+        "ctrlxl = widgets.Checkbox(value=False, description=\"ctrlxl\")\n",
+        "\n",
+        "\n",
+        "zzz_Extensions = widgets.Checkbox(value=False, description=\"Extensions\")\n",
+        "zzz_Upscaler = widgets.Checkbox(value=False, description=\"Upscalers\")\n",
+        "zzz_Continue = widgets.Checkbox(value=False, description=\"CONTINUE / / / \")\n",
+        "\n",
+        "zshare = \"--share --api --xformers --theme=dark\"\n",
+        "\n",
+        "os.chdir(zzz_install_widget.value)\n",
+        "boton_runzzz = widgets.Button(description=\"RUN > > >\")\n",
+        "boton_runzzz.style.button_color = '#1e1e1e'\n",
+        "boton_runzzz.style.font_weight = 'bold'\n",
+        "boton_runzzz.style.color = 'red'\n",
+        "\n",
+        "\n",
+        "left_box = widgets.VBox([ctrll5])\n",
+        "right_box = widgets.VBox([ctrlxl])\n",
+        "group_box = widgets.HBox([left_box, right_box],layout=widgets.Layout(height='45px', width='100%'))\n",
+        "\n",
+        "left_box.layout.max_width = '150px'\n",
+        "right_box.layout.max_width = '170px'\n",
+        "left_box.layout.overflow = 'hidden'\n",
+        "right_box.layout.overflow = 'hidden'\n",
+        "\n",
+        "widgets_box = widgets.VBox([zzz_install_widget, Download_Base_Model],layout=widgets.Layout(height='80px', width='100%'))\n",
+        "final_box = widgets.VBox([model_init, models_dir, zzz_Args, zzz_Training],layout=widgets.Layout(height='200px', width='100%'))\n",
+        "final_box1 = widgets.VBox([zzz_Extensions, zzz_Upscaler],layout=widgets.Layout(height='80px', width='100%'))\n",
+        "final_box2 = widgets.VBox([zzz_Continue],layout=widgets.Layout(height='90px', width='100%'))\n",
+        "\n",
+        "# zzz_Runzzz\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
+        "def runzzz(b):\n",
+        "    global widgets_box, boton_runzzz\n",
+        "    widgets_box.close()\n",
+        "    final_box.close()\n",
+        "    final_box1.close()\n",
+        "    final_box2.close()\n",
+        "    group_box.close()\n",
+        "    boton_runzzz.close()\n",
+        "    group_title.close()\n",
+        "\n",
+        "    if not zzz_Continue.value:\n",
+        "      with capture_output() as cap:\n",
+        "        import os\n",
+        "        if os.path.exists(zzz_widget.value):\n",
+        "          shutil.rmtree(zzz_widget.value)\n",
+        "          !git clone --depth 1 https://github.com/wilzamguerrero/vvv zzz\n",
+        "\n",
+        "        import os\n",
+        "        if not os.path.exists(zzz_widget.value):\n",
+        "          !git clone --depth 1 https://github.com/wilzamguerrero/vvv zzz\n",
+        "\n",
+        "        %cd zzz\n",
+        "\n",
+        "\n",
+        "        clear_output()\n",
+        "      print('\u001b[1;96mInstalling')\n",
+        "\n",
+        "\n",
+        "    if zzz_Continue.value:\n",
+        "      with capture_output() as cap:\n",
+        "        import os\n",
+        "        os.chdir(xyz_widget.value)\n",
+        "\n",
+        "        clear_output()\n",
+        "      print('\u001b[1;96mPreparing S.D.Z Continue ✓')\n",
+        "\n",
+        "    with capture_output() as cap:\n",
+        "      import os\n",
+        "      os.environ['TF_CPP_MIN_LOG_LEVEL'] = '2'\n",
+        "      !apt --fix-broken install\n",
+        "      !pip install fastapi==0.94.0 -qq\n",
+        "\n",
+        "\n",
+        "\n",
+        "# zzz_Models\n",
+        "      os.chdir(xyz_widget.value)\n",
+        "      %cd $mostaz\n",
+        "      download_command = f\"apt-get install -qq -y aria2 && url=\\\"{Download_Base_Model.value}\\\" && base_name=$(basename $url) && ((echo $url | grep -q \\\"drive.google.com\\\") && gdown --fuzzy $url || ((echo $url | grep -q \\\"huggingface.co/\\\") && (hf_token=\\\"\\\" && aria2c --console-log-level=error --summary-interval=10 --header=\\\"Authorization: Bearer $hf_token\\\" -c -x 16 -k 1M -s 16 $base_name $url)) || aria2c --console-log-level=error --summary-interval=10 -c -x 16 -k 1M -s 16 $url)\"\n",
+        "      os.system(download_command)\n",
+        "\n",
+        "\n",
+        "\n",
+        "    os.chdir(xyz_widget.value)\n",
+        "    selected_option = zzz_Version.value\n",
+        "    if selected_option == \"V1.5\":\n",
+        "        !python launch.py $zshare --ckpt \"$model_init.value\" --ckpt-dir \"$models_dir.value\" $zzz_Args.value\n",
+        "\n",
+        "\n",
+        "\n",
+        "boton_runzzz.on_click(runzzz)\n",
+        "group_title = widgets.HTML(value='')\n",
+        "group_title2 = widgets.HTML(value='')\n",
+        "display(widgets_box, group_title, group_box, group_title2, final_box1, final_box,  final_box2, boton_runzzz)"
+      ],
+      "metadata": {
+        "id": "C3nzhzaowLDl"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ],
   "metadata": {
