FIX littlepotat test latest

--- a/SDZ.ipynb
+++ b/SDZ.ipynb
@@ -43,6 +43,242 @@
     {
       "cell_type": "code",
       "source": [
+        "#@markdown <left><img src='https://github.com/wilzamguerrero/SDZ/blob/main/SDZ_custom/icon/save.png?raw=true' height=\"50\" alt=\"netdata\"/></center> 1\n",
+        "from IPython.utils import capture\n",
+        "from IPython.display import clear_output, display, HTML\n",
+        "\n",
+        "!pip install -q udocker\n",
+        "!udocker --allow-root install\n",
+        "!udocker --allow-root pull littlepotat/test:latest\n",
+        "!udocker --allow-root create --name=test littlepotat/test:latest\n",
+        "!udocker --allow-root setup --nvidia test\n",
+        "!wget https://github.com/cloudflare/cloudflared/releases/latest/download/cloudflared-linux-amd64.deb -O /content/cloudflared-linux-amd64.deb\n",
+        "!dpkg -i cloudflared-linux-amd64.deb\n",
+        "\n",
+        "clear_output()\n",
+        "print('\u001b[1;96mRequirements Installed ✓')"
+      ],
+      "metadata": {
+        "cellView": "form",
+        "id": "lZcl_bJfh4qQ"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#@markdown <left><img src='https://github.com/wilzamguerrero/SDZ/blob/main/SDZ_custom/icon/save.png?raw=true' height=\"50\" alt=\"netdata\"/></center> 2\n",
+        "from IPython.utils import capture\n",
+        "from IPython.display import clear_output, display, HTML\n",
+        "\n",
+        "import os\n",
+        "SDZ_install = \"/root/.udocker/containers/test/ROOT/content/test\"\n",
+        "\n",
+        "SDZ_Extensions = True\n",
+        "\n",
+        "\n",
+        "#model\n",
+        "#https://civitai.com/api/download/models/156110\n",
+        "#https://civitai.com/api/download/models/15236\n",
+        "\n",
+        "#cnet\n",
+        "#https://drive.google.com/file/d/1-1UkHMwBb2SjRiACoYco0nvSr4NmRMwl/view?usp=drive_link\n",
+        "#https://drive.google.com/file/d/1-ZF4EdVnqYVoYHVkxuplpVv-Htq0AebN/view?usp=drive_link\n",
+        "\n",
+        "\n",
+        "%cd /root/.udocker/containers/test/ROOT/content/test\n",
+        "\n",
+        "!wget --timestamping https://raw.githubusercontent.com/wilzamguerrero/SDZ/main/SDZ_custom/SDZ_user.css -O user.css\n",
+        "!wget --timestamping https://raw.githubusercontent.com/wilzamguerrero/SDZ/main/SDZ_custom/styles.csv\n",
+        "#!wget --timestamping https://raw.githubusercontent.com/wilzamguerrero/SDZ/main/SDZ_custom/SDZ_config.json -O config.json\n",
+        "\n",
+        "\n",
+        "%cd extensions\n",
+        "\n",
+        "link = \"https://github.com/ArtVen tureX/s d-w e b u i-ag ent-sche duler\"; os.system(f\"git clone {link.replace(' ', '')}\")\n",
+        "link = \"https://github.com/Coy ote-A/ul tim ate-upscale-for-a u to m a ti c 1 1 1 1\"; os.system(f\"git clone {link.replace(' ', '')}\")\n",
+        "link = \"https://github.com/ric hrob ber2/canvas-zoom\"; os.system(f\"git clone {link.replace(' ', '')}\")\n",
+        "link = \"https://github.com/vi yiv iyi/s t a b l e-d i f f u s i o n-w e b u i-zoomimage\"; os.system(f\"git clone {link.replace(' ', '')}\")\n",
+        "\n",
+        "%cd /root/.udocker/containers/test/ROOT/content/test/models\n",
+        "\n",
+        "#lora\n",
+        "if not os.path.exists('Lora'):\n",
+        "   os.makedirs('Lora')\n",
+        "   %cd Lora\n",
+        "   if not os.path.exists('epiNoiseoffset_v2.safetensors'):\n",
+        "        !wget --timestamping --content-disposition https://huggingface.co/uwg/modelz_base/resolve/main/Lora/epiNoiseoffset_v2.safetensors\n",
+        "        !wget --timestamping --content-disposition https://huggingface.co/uwg/modelz_base/resolve/main/Lora/theovercomer8sContrastFix_sd15.safetensors\n",
+        "        !wget --timestamping --content-disposition https://huggingface.co/uwg/modelz_base/resolve/main/Lora/to8sHighKeyLORASD15SD2_sd15.safetensors\n",
+        "        !wget --timestamping --content-disposition https://civitai.com/api/download/models/63006\n",
+        "        !wget --timestamping --content-disposition https://civitai.com/api/download/models/117467\n",
+        "        !wget --timestamping --content-disposition https://huggingface.co/casque/detailed_eye-10/resolve/main/detailed_eye-10.safetensors\n",
+        "        !wget --timestamping --content-disposition https://civitai.com/api/download/models/117955\n",
+        "        !wget --timestamping --content-disposition https://civitai.com/api/download/models/62833\n",
+        "        !wget --timestamping --content-disposition https://huggingface.co/uwg/modelz_base/resolve/main/Lora/ClothingAdjuster2.safetensors\n",
+        "%cd ../..\n",
+        "\n",
+        "%cd embeddings\n",
+        "if not os.path.exists('bad-hands-5.pt'):\n",
+        "    !wget --timestamping --content-disposition https://huggingface.co/uwg/modelz_base/resolve/main/embeddings/bad-hands-5.pt\n",
+        "    !wget --timestamping --content-disposition https://huggingface.co/uwg/modelz_base/resolve/main/embeddings/easynegative.safetensors\n",
+        "%cd ..\n",
+        "\n",
+        "#upscaler\n",
+        "%cd /root/.udocker/containers/test/ROOT/content/test/models\n",
+        "\n",
+        "if not os.path.exists('ESRGAN'):\n",
+        "    os.makedirs('ESRGAN')\n",
+        "    %cd ESRGAN\n",
+        "\n",
+        "    !wget --timestamping --content-disposition https://huggingface.co/uwg/upscaler/resolve/main/ESRGAN/4x-UltraSharp.pth\n",
+        "    !wget --timestamping --content-disposition https://huggingface.co/uwg/upscaler/resolve/main/ESRGAN/UniversalUpscaler/4x_UniversalUpscalerV2-Neutral_115000_swaG.pth\n",
+        "    !wget --timestamping --content-disposition https://huggingface.co/uwg/upscaler/resolve/main/ESRGAN/4x_RealisticRescaler_100000_G.pth\n",
+        "    !wget --timestamping --content-disposition https://huggingface.co/uwg/upscaler/resolve/main/ESRGAN/4x_foolhardy_Remacri.pth\n",
+        "\n",
+        "clear_output()\n",
+        "print('\u001b[1;96mCustomized Installed ✓')"
+      ],
+      "metadata": {
+        "cellView": "form",
+        "id": "p9UjFJMUh7y2"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#@markdown <left><img src='https://github.com/wilzamguerrero/SDZ/blob/main/SDZ_custom/icon/SDZanim2.gif?raw=true' height=\"50\" alt=\"netdata\"/></center>3\n",
+        "import atexit, requests, subprocess, time, re\n",
+        "from random import randint\n",
+        "from threading import Timer\n",
+        "from queue import Queue\n",
+        "def cloudflared(port, metrics_port, output_queue):\n",
+        "    atexit.register(lambda p: p.terminate(), subprocess.Popen(['cloudflared', 'tunnel', '--url', f'http://127.0.0.1:{port}', '--metrics', f'127.0.0.1:{metrics_port}'], stdout=subprocess.DEVNULL, stderr=subprocess.STDOUT))\n",
+        "    attempts, tunnel_url = 0, None\n",
+        "    while attempts < 10 and not tunnel_url:\n",
+        "        attempts += 1\n",
+        "        time.sleep(3)\n",
+        "        try:\n",
+        "            tunnel_url = re.search(\"(?P<url>https?:\\/\\/[^\\s]+.trycloudflare.com)\", requests.get(f'http://127.0.0.1:{metrics_port}/metrics').text).group(\"url\")\n",
+        "        except:\n",
+        "            pass\n",
+        "    if not tunnel_url:\n",
+        "        raise Exception(\"Can't connect to Cloudflare Edge\")\n",
+        "    output_queue.put(tunnel_url)\n",
+        "output_queue, metrics_port = Queue(), randint(8100, 9000)\n",
+        "thread = Timer(2, cloudflared, args=(7860, metrics_port, output_queue))\n",
+        "thread.start()\n",
+        "thread.join()\n",
+        "tunnel_url = output_queue.get()\n",
+        "print(tunnel_url)\n",
+        "\n",
+        "#!udocker --allow-root -q run test\n",
+        "!udocker --allow-root -q run -v /content/drive/MyDrive/AI/Civ:/civ -v /content/drive/MyDrive/AI/ControlNet15:/controlnet15 test"
+      ],
+      "metadata": {
+        "cellView": "form",
+        "id": "XYULNWA0h-Lu"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "\\\n",
+        "\\\n",
+        "\\\n",
+        "\\\n",
+        "\\\n",
+        "\\\n",
+        "\\\n",
+        "\\\n",
+        "\\\n",
+        "\\\n",
+        "\\\n",
+        "\\\n",
+        "\\\n",
+        "\\\n",
+        "\\\n",
+        "\\\n",
+        "\\\n",
+        "\\\n",
+        "\\\n",
+        "\\\n",
+        "\\\n",
+        "\\\n",
+        "\\\n",
+        "\\\n",
+        "\\\n",
+        "\\\n",
+        "\\\n",
+        "\\\n",
+        "\\\n",
+        "\\\n",
+        "\\\n",
+        "\\\n",
+        "\\\n",
+        "\\\n",
+        "\\\n",
+        "\\\n",
+        "\\\n",
+        "\\\n",
+        "\\\n",
+        "\\\n",
+        "\\\n",
+        "\\\n",
+        "\\\n",
+        "\\\n",
+        "\\\n",
+        "\\\n",
+        "\\\n",
+        "\\\n",
+        "\\\n",
+        "\\\n",
+        "\\\n",
+        "\\\n",
+        "\\\n",
+        "\\\n",
+        "\\\n",
+        "\\\n",
+        "\\\n",
+        "\\\n",
+        "\\\n",
+        "\\\n",
+        "\\\n",
+        "\\\n",
+        "\\\n",
+        "\\\n",
+        "\\\n",
+        "\\\n",
+        "\\\n",
+        "\\\n",
+        "\\\n",
+        "\\\n",
+        "\\\n",
+        "\\\n",
+        "\\\n",
+        "\\\n",
+        "\\\n",
+        "\\\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n"
+      ],
+      "metadata": {
+        "id": "w22N8xFmh0Re"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
         "#@markdown <left><img src='https://github.com/wilzamguerrero/SDZ/blob/main/SDZ_custom/icon/SDZanim2.gif?raw=true' height=\"50\" alt=\"netdata\"/></center> <a href=\"https://wilzamguerrero.ml/3c030fffd57c4e3bb4dd62e3971cb6a9\"><font face='Verdana Regular' color='#80ff3' size='4'><left><img src='https://github.com/wilzamguerrero/SDZ/blob/main/SDZ_custom/icon/how_to_use5.png?raw=true' height=\"42\" alt=\"netdata\"/></center></font></a> <a href=\"https://zero01101.github.io/openOutpaint/\"><font face='Verdana Regular' color='#80ff3' size='4'><left><img src='https://github.com/wilzamguerrero/SDZ/blob/main/SDZ_custom/icon/open_out_paint.png?raw=true' height=\"42\" alt=\"netdata\"/></center></font></a> <a href=\"https://www.painthua.com/\"><font face='Verdana Regular' color='#80ff3' size='4'><left><img src='https://github.com/wilzamguerrero/SDZ/blob/main/SDZ_custom/icon/paint_hua.png?raw=true' height=\"42\" alt=\"netdata\"/></center></font></a> </a> <a href=\"https://github.com/ddPn08/kohya-sd-scripts-webui\"><font face='Verdana Regular' color='#80ff3' size='4'><left><img src='https://github.com/wilzamguerrero/SDZ/blob/main/SDZ_custom/icon/kohya2.png?raw=true' height=\"42\" alt=\"netdata\"/></center></font></a> </a> <a href=\"https://github.com/Linaqruf/kohya-trainer\"><font face='Verdana Regular' color='#80ff3' size='4'><left><img src='https://github.com/wilzamguerrero/SDZ/blob/main/SDZ_custom/icon/kohya2.png?raw=true' height=\"42\" alt=\"netdata\"/></center></font></a> </a> <a href=\"https://zhuyu1997.github.io/open-pose-editor/\"><font face='Verdana Regular' color='#80ff3' size='4'><left><img src='https://github.com/wilzamguerrero/SDZ/blob/main/SDZ_custom/icon/save.png?raw=true' height=\"42\" alt=\"netdata\"/></center></font></a> </center></font></a>\n",
         "import os\n",
         "import shutil\n",
@@ -399,6 +635,7 @@
     "accelerator": "GPU",
     "colab": {
       "provenance": [],
+      "toc_visible": true,
       "include_colab_link": true
     },
     "kernelspec": {
