--- a/SDZ.ipynb
+++ b/SDZ.ipynb
@@ -238,6 +238,83 @@
     {
       "cell_type": "code",
       "source": [
+        "#@markdown <left><img src='https://github.com/wilzamguerrero/SDZ/blob/main/SDZ_custom/icon/save.png?raw=true' height=\"50\" alt=\"netdata\"/></center>\n",
+        "from IPython.utils import capture\n",
+        "from IPython.display import clear_output, display, HTML\n",
+        "\n",
+        "!pip install -q udocker\n",
+        "!udocker --allow-root install\n",
+        "!udocker --allow-root pull littlepotat/test:latest\n",
+        "!udocker --allow-root create --name=test littlepotat/test:latest\n",
+        "!udocker --allow-root setup --nvidia test\n",
+        "!wget https://github.com/cloudflare/cloudflared/releases/latest/download/cloudflared-linux-amd64.deb -O /content/cloudflared-linux-amd64.deb\n",
+        "!dpkg -i cloudflared-linux-amd64.deb\n",
+        "\n",
+        "\n",
+        "%cd /root/.udocker/containers/test/ROOT/content/test\n",
+        "\n",
+        "!wget --timestamping https://raw.githubusercontent.com/wilzamguerrero/SDZ/main/SDZ_custom/SDZ_user.css -O user.css\n",
+        "!wget --timestamping https://raw.githubusercontent.com/wilzamguerrero/SDZ/main/SDZ_custom/styles.csv\n",
+        "#!wget --timestamping https://raw.githubusercontent.com/wilzamguerrero/SDZ/main/SDZ_custom/SDZ_config.json -O config.json\n",
+        "\n",
+        "\n",
+        "mosta = 'models/S t a b l e-d i f f u s i o n'\n",
+        "mostaz = mosta.replace(' ', '')\n",
+        "\n",
+        "%cd $mostaz\n",
+        "import os; link = \"https://c iv i t ai.com/a pi/download/models/15236\"; output_file = \"d2.saf ete nsors\"; os.system(f\"wget --timestamping {link.replace(' ', '')} -O {output_file.replace(' ', '')}\")\n",
+        "\n",
+        "clear_output()\n",
+        "print('\u001b[1;96mRequirements Installed ✓')"
+      ],
+      "metadata": {
+        "cellView": "form",
+        "id": "340cvmwDIOXN"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#@markdown <left><img src='https://github.com/wilzamguerrero/SDZ/blob/main/SDZ_custom/icon/SDZanim2.gif?raw=true' height=\"50\" alt=\"netdata\"/></center>3\n",
+        "import atexit, requests, subprocess, time, re\n",
+        "from random import randint\n",
+        "from threading import Timer\n",
+        "from queue import Queue\n",
+        "def cloudflared(port, metrics_port, output_queue):\n",
+        "    atexit.register(lambda p: p.terminate(), subprocess.Popen(['cloudflared', 'tunnel', '--url', f'http://127.0.0.1:{port}', '--metrics', f'127.0.0.1:{metrics_port}'], stdout=subprocess.DEVNULL, stderr=subprocess.STDOUT))\n",
+        "    attempts, tunnel_url = 0, None\n",
+        "    while attempts < 10 and not tunnel_url:\n",
+        "        attempts += 1\n",
+        "        time.sleep(3)\n",
+        "        try:\n",
+        "            tunnel_url = re.search(\"(?P<url>https?:\\/\\/[^\\s]+.trycloudflare.com)\", requests.get(f'http://127.0.0.1:{metrics_port}/metrics').text).group(\"url\")\n",
+        "        except:\n",
+        "            pass\n",
+        "    if not tunnel_url:\n",
+        "        raise Exception(\"Can't connect to Cloudflare Edge\")\n",
+        "    output_queue.put(tunnel_url)\n",
+        "output_queue, metrics_port = Queue(), randint(8100, 9000)\n",
+        "thread = Timer(2, cloudflared, args=(7860, metrics_port, output_queue))\n",
+        "thread.start()\n",
+        "thread.join()\n",
+        "tunnel_url = output_queue.get()\n",
+        "print(tunnel_url)\n",
+        "\n",
+        "#!udocker --allow-root -q run test\n",
+        "!udocker --allow-root -q run -v /content/drive/MyDrive/AI/Civ:/civ -v /content/drive/MyDrive/AI/ControlNet15:/controlnet15 test"
+      ],
+      "metadata": {
+        "cellView": "form",
+        "id": "XYULNWA0h-Lu"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
         "#@markdown <left><img src='https://github.com/wilzamguerrero/SDZ/blob/main/SDZ_custom/icon/save.png?raw=true' height=\"50\" alt=\"netdata\"/></center> 1\n",
         "from IPython.utils import capture\n",
         "from IPython.display import clear_output, display, HTML\n",
@@ -338,44 +415,6 @@
       "metadata": {
         "cellView": "form",
         "id": "p9UjFJMUh7y2"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "#@markdown <left><img src='https://github.com/wilzamguerrero/SDZ/blob/main/SDZ_custom/icon/SDZanim2.gif?raw=true' height=\"50\" alt=\"netdata\"/></center>3\n",
-        "import atexit, requests, subprocess, time, re\n",
-        "from random import randint\n",
-        "from threading import Timer\n",
-        "from queue import Queue\n",
-        "def cloudflared(port, metrics_port, output_queue):\n",
-        "    atexit.register(lambda p: p.terminate(), subprocess.Popen(['cloudflared', 'tunnel', '--url', f'http://127.0.0.1:{port}', '--metrics', f'127.0.0.1:{metrics_port}'], stdout=subprocess.DEVNULL, stderr=subprocess.STDOUT))\n",
-        "    attempts, tunnel_url = 0, None\n",
-        "    while attempts < 10 and not tunnel_url:\n",
-        "        attempts += 1\n",
-        "        time.sleep(3)\n",
-        "        try:\n",
-        "            tunnel_url = re.search(\"(?P<url>https?:\\/\\/[^\\s]+.trycloudflare.com)\", requests.get(f'http://127.0.0.1:{metrics_port}/metrics').text).group(\"url\")\n",
-        "        except:\n",
-        "            pass\n",
-        "    if not tunnel_url:\n",
-        "        raise Exception(\"Can't connect to Cloudflare Edge\")\n",
-        "    output_queue.put(tunnel_url)\n",
-        "output_queue, metrics_port = Queue(), randint(8100, 9000)\n",
-        "thread = Timer(2, cloudflared, args=(7860, metrics_port, output_queue))\n",
-        "thread.start()\n",
-        "thread.join()\n",
-        "tunnel_url = output_queue.get()\n",
-        "print(tunnel_url)\n",
-        "\n",
-        "#!udocker --allow-root -q run test\n",
-        "!udocker --allow-root -q run -v /content/drive/MyDrive/AI/Civ:/civ -v /content/drive/MyDrive/AI/ControlNet15:/controlnet15 test"
-      ],
-      "metadata": {
-        "cellView": "form",
-        "id": "XYULNWA0h-Lu"
       },
       "execution_count": null,
       "outputs": []
