--- a/SDZ.ipynb
+++ b/SDZ.ipynb
@@ -268,7 +268,6 @@
         "print('\u001b[1;96mRequirements Installed ✓')"
       ],
       "metadata": {
-        "cellView": "form",
         "id": "340cvmwDIOXN"
       },
       "execution_count": null,
@@ -306,7 +305,6 @@
         "!udocker --allow-root -q run -v /content/drive/MyDrive/AI/Civ:/civ -v /content/drive/MyDrive/AI/ControlNet15:/controlnet15 test"
       ],
       "metadata": {
-        "cellView": "form",
         "id": "XYULNWA0h-Lu"
       },
       "execution_count": null,
@@ -331,7 +329,6 @@
         "print('\u001b[1;96mRequirements Installed ✓')"
       ],
       "metadata": {
-        "cellView": "form",
         "id": "lZcl_bJfh4qQ"
       },
       "execution_count": null,
@@ -807,6 +804,39 @@
       "metadata": {
         "cellView": "form",
         "id": "kRBksQ5QZOqQ"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "%%capture\n",
+        "import os\n",
+        "import shutil\n",
+        "import zipfile\n",
+        "%cd /content\n",
+        "!gdown https://acortar.link/7s6bCl -O er.zip\n",
+        "with zipfile.ZipFile('er.zip', 'r') as zip_ref:\n",
+        "    zip_ref.extractall()\n",
+        "with zipfile.ZipFile('er.zip', 'r') as zip_ref:\n",
+        "    old = zip_ref.namelist()[0]\n",
+        "end = '/content/ra/re/ri/ro/ru'\n",
+        "for archivo in os.listdir(old):\n",
+        "    go = os.path.join(old, archivo)\n",
+        "    shutil.move(go, end)\n",
+        "shutil.rmtree(old)\n",
+        "os.remove('er.zip')\n",
+        "%cd /content/ra/re/ri/ro/ru\n",
+        "os.makedirs(\"localizations\")\n",
+        "!wget --timestamping https://raw.githubusercontent.com/wilzamguerrero/SDZ/main/SDZ_custom/SDZ_user.css -O user.css\n",
+        "!wget --timestamping https://raw.githubusercontent.com/wilzamguerrero/SDZ/main/SDZ_custom/styles.csv\n",
+        "\n",
+        "\n",
+        "#!python launch.py --share --api --xformers --theme dark --no-download-sd-model --ckpt-dir /content/drive/MyDrive/AI/Civ\n"
+      ],
+      "metadata": {
+        "id": "KtOyT57ngii2"
       },
       "execution_count": null,
       "outputs": []
