--- a/SDZ_SageMaker.ipynb
+++ b/SDZ_SageMaker.ipynb
@@ -45,6 +45,7 @@
     "%cd /home/studio-lab-user/content/SDZ\n",
     "!wget --timestamping https://raw.githubusercontent.com/wilzamguerrero/SDZ/main/SDZ_custom/SDZ_user.css -O user.css\n",
     "!wget --timestamping https://raw.githubusercontent.com/wilzamguerrero/SDZ/main/SDZ_custom/styles.csv\n",
+    "!wget --timestamping https://raw.githubusercontent.com/wilzamguerrero/SDZ/main/SDZ_custom/SDZ_config.json -O config.json\n",
     "\n",
     "#extensions\n",
     "%cd /home/studio-lab-user/content/SDZ/extensions\n",
