--- a/SDZ_SageMaker.ipynb
+++ b/SDZ_SageMaker.ipynb
@@ -36,22 +36,42 @@
     "\n",
     "!git clone --depth 1 https://github.com/AUTOMATIC1111/stable-diffusion-webui SDZ\n",
     "\n",
-    "#model\n",
+    "#Model\n",
     "%cd /home/studio-lab-user/content/SDZ/models/Stable-diffusion\n",
     "!aria2c --console-log-level=error -c -x 16 -s 16 -k 1M --content-disposition https://civitai.com/api/download/models/15236\n",
     "#!wget --no-check-certificate --content-disposition https://civitai.com/api/download/models/15236\n",
     "\n",
-    "#config\n",
+    "#Config\n",
     "%cd /home/studio-lab-user/content/SDZ\n",
     "!wget --timestamping https://raw.githubusercontent.com/wilzamguerrero/SDZ/main/SDZ_custom/SDZ_user.css -O user.css\n",
     "!wget --timestamping https://raw.githubusercontent.com/wilzamguerrero/SDZ/main/SDZ_custom/styles.csv\n",
-    "!wget --timestamping https://raw.githubusercontent.com/wilzamguerrero/SDZ/main/SDZ_custom/SDZ_config.json -O config.json\n",
+    "\n",
+    "#Vae\n",
+    "%cd /home/studio-lab-user/content/SDZ/models/VAE\n",
+    "!aria2c --console-log-level=error -c -x 16 -s 16 -k 1M --content-disposition https://huggingface.co/uwg/modelz_base/resolve/main/VAE/vae-ft-mse-840000-ema-pruned.ckpt\n",
+    "!aria2c --console-log-level=error -c -x 16 -s 16 -k 1M --content-disposition https://huggingface.co/madebyollin/sdxl-vae-fp16-fix/resolve/main/sdxl_vae.safetensors\n",
+    "\n",
+    "#Embeddings\n",
+    "%cd /home/studio-lab-user/content/SDZ/embeddings\n",
+    "!wget --timestamping https://huggingface.co/uwg/modelz_base/resolve/main/embeddings/bad-hands-5.pt\n",
+    "!wget --timestamping https://huggingface.co/uwg/modelz_base/resolve/main/embeddings/easynegative.safetensors\n",
+    "\n",
+    "#Lora\n",
+    "!mkdir /home/studio-lab-user/content/SDZ/models/Lora\n",
+    "%cd /home/studio-lab-user/content/SDZ/models/Lora\n",
+    "!wget --timestamping https://huggingface.co/uwg/modelz_base/resolve/main/Lora/epiNoiseoffset_v2.safetensors\n",
+    "!wget --timestamping https://huggingface.co/uwg/modelz_base/resolve/main/Lora/theovercomer8sContrastFix_sd15.safetensors\n",
+    "!wget --timestamping https://huggingface.co/uwg/modelz_base/resolve/main/Lora/to8sHighKeyLORASD15SD2_sd15.safetensors\n",
+    "!wget --timestamping https://civitai.com/api/download/models/63006 -O LowRA.safetensors\n",
+    "!wget --timestamping https://civitai.com/api/download/models/117467 -O polyhedron_skinny_all.pt\n",
+    "!wget --timestamping https://huggingface.co/casque/detailed_eye-10/resolve/main/detailed_eye-10.safetensors\n",
+    "#!wget --timestamping https://huggingface.co/uwg/modelz_base/resolve/main/Lora/ClothingAdjuster2.safetensors\n",
+    "!wget --timestamping https://civitai.com/api/download/models/62833 -O add_detail.safetensors\n",
     "\n",
     "#extensions\n",
     "%cd /home/studio-lab-user/content/SDZ/extensions\n",
     "\n",
     "!git clone https://github.com/etherealxx/batchlinks-webui\n",
-    "!git clone https://github.com/P2Enjoy/sd-webui-roop-uncensored\n",
     "!git clone https://github.com/Coyote-A/ultimate-upscale-for-automatic1111\n",
     "!git clone https://github.com/DominikDoom/a1111-sd-webui-tagcomplete\n",
     "!git clone https://github.com/zanllp/sd-webui-infinite-image-browsing\n",
@@ -61,8 +81,11 @@
     "!git clone https://github.com/richrobber2/canvas-zoom\n",
     "!git clone https://github.com/viyiviyi/stable-diffusion-webui-zoomimage\n",
     "!git clone https://github.com/Mikubill/sd-webui-controlnet\n",
+    "#!git clone https://github.com/ddpn08/kohya-sd-scripts-webui.git\n",
+    "#!git clone https://github.com/d8ahazard/sd_dreambooth_extension.git\n",
+    "#!gdown https://acortar.link/Js6Hu0 -O roopu.zip && unzip -n roopu.zip && rm roopu.zip\n",
     "\n",
-    "#upscaler\n",
+    "#Upscaler\n",
     "!mkdir /home/studio-lab-user/content/SDZ/models/ESRGAN\n",
     "%cd /home/studio-lab-user/content/SDZ/models/ESRGAN\n",
     "\n",
@@ -74,6 +97,11 @@
     "#!wget --timestamping https://huggingface.co/uwg/upscaler/resolve/main/ESRGAN/4x_CountryRoads_377000_G.pth\n",
     "#!wget --timestamping https://huggingface.co/uwg/upscaler/resolve/main/ESRGAN/4x_fatal_Anime_500000_G.pth\n",
     "#!wget --timestamping https://huggingface.co/uwg/upscaler/resolve/main/ESRGAN/4x_Fatality_Comix_260000_G.pth\n",
+    "!wget --timestamping https://huggingface.co/uwg/upscaler/resolve/main/ESRGAN/UniversalUpscaler/4x_UniversalUpscalerV2-Neutral_115000_swaG.pth\n",
+    "#!wget --timestamping https://huggingface.co/uwg/upscaler/resolve/main/ESRGAN/UniversalUpscaler/4x_UniversalUpscalerV2-Sharp_101000_G.pth\n",
+    "!wget --timestamping https://huggingface.co/uwg/upscaler/resolve/main/ESRGAN/UniversalUpscaler/4x_UniversalUpscalerV2-Sharper_103000_G.pth\n",
+    "!wget --timestamping https://huggingface.co/uwg/upscaler/resolve/main/ESRGAN/UniversalUpscaler/Legacy/4x_UniversalUpscaler-Detailed_155000_G.pth\n",
+    "#!wget --timestamping https://huggingface.co/uwg/upscaler/resolve/main/ESRGAN/UniversalUpscaler/Legacy/4x_UniversalUpscaler-Soft_190000_G.pth\n",
     "!wget --timestamping https://huggingface.co/uwg/upscaler/resolve/main/ESRGAN/4x_foolhardy_Remacri.pth\n",
     "!wget --timestamping https://huggingface.co/uwg/upscaler/resolve/main/ESRGAN/4x-UltraSharp.pth\n",
     "#!wget --timestamping https://huggingface.co/uwg/upscaler/resolve/main/ESRGAN/4x_NickelbackFS_72000_G.pth\n",
@@ -100,9 +128,16 @@
     "#!wget --timestamping https://huggingface.co/uwg/upscaler/resolve/main/ESRGAN/sudo_rife4_269.662_testV1_scale1.pth\n",
     "#!wget --timestamping https://huggingface.co/uwg/upscaler/resolve/main/ESRGAN/WaifuGAN_v3_30000.pth\n",
     "#wget --timestamping https://huggingface.co/uwg/upscaler/resolve/main/GFPGAN/GFPGANv1.3.pth\n",
-    "#wget --timestamping https://huggingface.co/uwg/upscaler/resolve/main/GFPGAN/GFPGANv1.4.pth\n",
-    "\n",
-    "\n",
+    "#wget --timestamping https://huggingface.co/uwg/upscaler/resolve/main/GFPGAN/GFPGANv1.4.pth"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c007f7af",
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "#Controlnet\n",
     "canny = \"0\"\n",
     "openpose = \"0\"\n",
@@ -114,7 +149,7 @@
     "scribble = \"0\"\n",
     "segmentation = \"0\"\n",
     "shuffle = \"0\"\n",
-    "tile = \"0\"\n",
+    "tile = \"1\"\n",
     "inpaint = \"0\"\n",
     "instruct_p2p = \"0\"\n",
     "t2i_adapter = \"0\"\n",
@@ -184,7 +219,7 @@
     "        !aria2c --console-log-level=error -c -x 16 -s 16 -k 1M https://huggingface.co/ckpt/ControlNet-v1-1/resolve/main/t2iadapter_zoedepth_sd15v1.pth -o t2iadapter_zoedepth_sd15v1.pth     \n",
     "main()\n",
     "print_line(0, color=\"green\")\n",
-    "cprint(f\"[+] All Download Completed.\", color=\"flat_cyan\")\n"
+    "cprint(f\"[+] All Download Completed.\", color=\"flat_cyan\")"
    ]
   },
   {
