--- a/SDZ_SageMaker.ipynb
+++ b/SDZ_SageMaker.ipynb
@@ -72,6 +72,7 @@
     "%cd /home/studio-lab-user/content/SDZ/extensions\n",
     "\n",
     "!git clone https://github.com/etherealxx/batchlinks-webui\n",
+    "!git clone https://github.com/glucauze/sd-webui-faceswaplab\n",
     "!git clone https://github.com/Coyote-A/ultimate-upscale-for-automatic1111\n",
     "!git clone https://github.com/DominikDoom/a1111-sd-webui-tagcomplete\n",
     "!git clone https://github.com/zanllp/sd-webui-infinite-image-browsing\n",
@@ -84,6 +85,8 @@
     "#!git clone https://github.com/ddpn08/kohya-sd-scripts-webui.git\n",
     "#!git clone https://github.com/d8ahazard/sd_dreambooth_extension.git\n",
     "#!gdown https://acortar.link/Js6Hu0 -O roopu.zip && unzip -n roopu.zip && rm roopu.zip\n",
+    "!sed -i 's/threshold\", 0.7/threshold\", 99999999/' /home/studio-lab-user/content/SDZ/extensions/sd-webui-faceswaplab/scripts/faceswaplab_utils/imgutils.py\n",
+    "\n",
     "\n",
     "#Upscaler\n",
     "!mkdir /home/studio-lab-user/content/SDZ/models/ESRGAN\n",
