--- a/SDZ_SageMaker.ipynb
+++ b/SDZ_SageMaker.ipynb
@@ -38,27 +38,36 @@
     "\n",
     "#Model\n",
     "%cd /home/studio-lab-user/content/SDZ/models/Stable-diffusion\n",
+    "\n",
     "!aria2c --console-log-level=error -c -x 16 -s 16 -k 1M --content-disposition https://civitai.com/api/download/models/15236\n",
     "#!wget --no-check-certificate --content-disposition https://civitai.com/api/download/models/15236\n",
     "\n",
     "#Config\n",
     "%cd /home/studio-lab-user/content/SDZ\n",
+    "\n",
     "!wget --timestamping https://raw.githubusercontent.com/wilzamguerrero/SDZ/main/SDZ_custom/SDZ_user.css -O user.css\n",
     "!wget --timestamping https://raw.githubusercontent.com/wilzamguerrero/SDZ/main/SDZ_custom/styles.csv\n",
     "\n",
     "#Vae\n",
     "%cd /home/studio-lab-user/content/SDZ/models/VAE\n",
     "!aria2c --console-log-level=error -c -x 16 -s 16 -k 1M --content-disposition https://huggingface.co/uwg/modelz_base/resolve/main/VAE/vae-ft-mse-840000-ema-pruned.ckpt\n",
-    "!aria2c --console-log-level=error -c -x 16 -s 16 -k 1M --content-disposition https://huggingface.co/madebyollin/sdxl-vae-fp16-fix/resolve/main/sdxl_vae.safetensors\n",
+    "!aria2c --console-log-level=error -c -x 16 -s 16 -k 1M --content-disposition https://huggingface.co/uwg/modelz_base/resolve/main/VAE/sdxl-vae-fp16.safetensors\n",
     "\n",
     "#Embeddings\n",
     "%cd /home/studio-lab-user/content/SDZ/embeddings\n",
+    "\n",
     "!wget --timestamping https://huggingface.co/uwg/modelz_base/resolve/main/embeddings/bad-hands-5.pt\n",
     "!wget --timestamping https://huggingface.co/uwg/modelz_base/resolve/main/embeddings/easynegative.safetensors\n",
+    "!wget --timestamping https://huggingface.co/uwg/modelz_base/resolve/main/embeddings/EasyNegativeV2.safetensors\n",
+    "!wget --timestamping https://huggingface.co/uwg/modelz_base/resolve/main/embeddings/FastNegativeEmbedding.pt\n",
+    "!wget --timestamping https://huggingface.co/uwg/modelz_base/resolve/main/embeddings/bad-artist-anime.pt\n",
+    "!wget --timestamping https://huggingface.co/uwg/modelz_base/resolve/main/embeddings/bad-artist.pt\n",
+    "!wget --timestamping https://huggingface.co/uwg/modelz_base/resolve/main/embeddings/negativeXL.safetensors\n",
     "\n",
     "#Lora\n",
     "!mkdir /home/studio-lab-user/content/SDZ/models/Lora\n",
     "%cd /home/studio-lab-user/content/SDZ/models/Lora\n",
+    "\n",
     "!wget --timestamping https://huggingface.co/uwg/modelz_base/resolve/main/Lora/epiNoiseoffset_v2.safetensors\n",
     "!wget --timestamping https://huggingface.co/uwg/modelz_base/resolve/main/Lora/theovercomer8sContrastFix_sd15.safetensors\n",
     "!wget --timestamping https://huggingface.co/uwg/modelz_base/resolve/main/Lora/to8sHighKeyLORASD15SD2_sd15.safetensors\n",
@@ -82,11 +91,61 @@
     "!git clone https://github.com/richrobber2/canvas-zoom\n",
     "!git clone https://github.com/viyiviyi/stable-diffusion-webui-zoomimage\n",
     "!git clone https://github.com/Mikubill/sd-webui-controlnet\n",
+    "!sed -i 's/threshold\", 0.7/threshold\", 99999999/' /home/studio-lab-user/content/SDZ/extensions/sd-webui-faceswaplab/scripts/faceswaplab_utils/imgutils.py\n",
     "#!git clone https://github.com/ddpn08/kohya-sd-scripts-webui.git\n",
     "#!git clone https://github.com/d8ahazard/sd_dreambooth_extension.git\n",
     "#!gdown https://acortar.link/Js6Hu0 -O roopu.zip && unzip -n roopu.zip && rm roopu.zip\n",
-    "!sed -i 's/threshold\", 0.7/threshold\", 99999999/' /home/studio-lab-user/content/SDZ/extensions/sd-webui-faceswaplab/scripts/faceswaplab_utils/imgutils.py\n",
+    "#!git clone https://github.com/thygate/stable-diffusion-webui-depthmap-script.git\n",
+    "#!git clone https://github.com/graemeniedermayer/stable-diffusion-webui-normalmap-script.git\n",
+    "#!git clone https://github.com/dustysys/ddetailer.git\n",
+    "#!git clone https://github.com/Bing-su/adetailer.git\n",
+    "#!git clone https://github.com/volotat/SD-CN-Animation.git\n",
+    "#!git clone https://github.com/AUTOMATIC1111/stable-diffusion-webui-promptgen.git\n",
+    "#!git clone https://github.com/imrayya/stable-diffusion-webui-Prompt_Generator.git\n",
+    "#!git clone https://github.com/canisminor1990/sd-web-ui-kitchen-theme.git\n",
+    "#!git clone https://github.com/v8hid/infinite-zoom-automatic1111-webui.git\n",
+    "#!git clone https://github.com/Extraltodeus/depthmap2mask.git\n",
+    "#!git clone https://github.com/fkunn1326/openpose-editor.git\n",
+    "#!git clone https://github.com/opparco/stable-diffusion-webui-two-shot.git\n",
+    "#!git clone https://github.com/opparco/stable-diffusion-webui-composable-lora.git\n",
+    "#!git clone https://github.com/jexom/sd-webui-depth-lib.git\n",
+    "#!git clone https://github.com/alemelis/sd-webui-ar.git\n",
+    "#!git clone https://github.com/hnmr293/posex.git\n",
+    "#!git clone https://github.com/nonnonstop/sd-webui-3d-open-pose-editor.git\n",
+    "#!git clone https://github.com/butaixianran/Stable-Diffusion-Webui-Civitai-Helper.git\n",
+    "#!git clone https://github.com/Scholar01/sd-webui-mov2mov.git\n",
+    "#!git clone https://github.com/AUTOMATIC1111/stable-diffusion-webui-pixelization.git\n",
+    "#!git clone https://github.com/s9roll7/ebsynth_utility.git\n",
+    "#!git clone https://github.com/journey-ad/sd-webui-bilingual-localization.git\n",
+    "#!git clone https://github.com/hako-mikan/sd-webui-supermerger.git\n",
+    "#!git clone https://github.com/zero01101/openOutpaint-webUI-extension.git\n",
+    "#!git clone https://github.com/Bing-su/sd-webui-tunnels.git\n",
+    "#!git clone https://github.com/bbc-mc/sdweb-merge-block-weighted-gui.git\n",
+    "#!git clone https://github.com/bbc-mc/sdweb-xyplus.git\n",
+    "#!git clone https://github.com/KohakuBlueleaf/a1111-sd-webui-locon.git\n",
+    "#!git clone https://github.com/arenatemp/stable-diffusion-webui-model-toolkit.git\n",
+    "#!git clone https://github.com/fishslot/video_loopback_for_webui.git\n",
+    "#!git clone https://github.com/mcmonkeyprojects/sd-dynamic-thresholding.git\n",
+    "#!git clone https://github.com/kohya-ss/sd-webui-additional-networks.git\n",
+    "#!git clone https://github.com/hnmr293/sd-webui-llul.git\n",
+    "#!git clone https://github.com/hnmr293/sd-webui-cutoff.git\n",
+    "#!git clone https://github.com/AUTOMATIC1111/stable-diffusion-webui-rembg\n",
+    "#!git clone https://github.com/camenduru/stable-diffusion-webui-huggingface\n",
+    "#!git clone https://github.com/AIrjen/OneButtonPrompt.git\n",
+    "#!git clone https://github.com/deforum-art/deforum-for-automatic1111-webui.git\n",
+    "#!git clone https://github.com/zanllp/sd-webui-infinite-image-browsing.git\n",
+    "#!git clone https://github.com/Uminosachi/sd-webui-inpaint-anything.git\n",
+    "#!wget https://raw.githubusercontent.com/camenduru/stable-diffusion-webui-scripts/main/run_n_times.py\n",
+    "#!git clone https://github.com/CiaraStrawberry/TemporalKit.git\n",
     "\n",
+    "#!git clone https://github.com/sunnyark/civitai-shortcut\n",
+    "#!gdown https://acortar.link/52XJvM -O dragGAN.zip && unzip -n dragGAN.zip && rm dragGAN.zip\n",
+    "#!gdown https://acortar.link/TQvkPk -O loopback_scaler.zip && unzip -n loopback_scaler.zip && rm loopback_scaler.zip\n",
+    "#!gdown https://acortar.link/c7W5YY -O 3D_editor.zip && unzip -n 3D_editor.zip && rm 3D_editor.zip\n",
+    "#!gdown https://acortar.link/KayyQV -O 3D_loader.zip && unzip -n 3D_loader.zip && rm 3D_loader.zip\n",
+    "#!gdown https://acortar.link/e5cxQ0 -O txt_img_3d.zip && unzip -n txt_img_3d.zip && rm txt_img_3d.zip\n",
+    "#!gdown https://acortar.link/US0GK0 -O qrcode_gen.zip && unzip -n qrcode_gen.zip && rm qrcode_gen.zip\n",
+    "#!gdown https://acortar.link/wyLuCY -O qrcode_tool.zip && unzip -n qrcode_tool.zip && rm qrcode_tool.zip\n",
     "\n",
     "#Upscaler\n",
     "!mkdir /home/studio-lab-user/content/SDZ/models/ESRGAN\n",
