--- a/SDZ_SageMaker.ipynb
+++ b/SDZ_SageMaker.ipynb
@@ -138,6 +138,7 @@
     "#!wget https://raw.githubusercontent.com/camenduru/stable-diffusion-webui-scripts/main/run_n_times.py\n",
     "#!git clone https://github.com/CiaraStrawberry/TemporalKit.git\n",
     "#!git clone https://github.com/novitalabs/sd-webui-cleaner\n",
+    "#!git clone https://github.com/n714/sd-webui-generate-button\n",
     "\n",
     "#!git clone https://github.com/sunnyark/civitai-shortcut\n",
     "#!gdown https://acortar.link/52XJvM -O dragGAN.zip && unzip -n dragGAN.zip && rm dragGAN.zip\n",
